src/cls/rbd/cls_rbd_client.cc
@@ -2106,7 +2106,6 @@ namespace librbd {
       return 0;
     }
 
-
     int trash_get(librados::IoCtx *ioctx, const std::string &id,
                   cls::rbd::TrashImageSpec *trash_spec)
     {
@@ -2121,6 +2120,28 @@ namespace librbd {
 
       bufferlist::iterator it = out_bl.begin();
       return trash_get_finish(&it, trash_spec);
+    }
+
+    void trash_state_set(librados::ObjectWriteOperation *op,
+                         const std::string &id,
+                         const cls::rbd::TrashImageState &trash_state,
+                         const cls::rbd::TrashImageState &expect_state)
+    {
+      bufferlist bl;
+      ::encode(id, bl);
+      ::encode(trash_state, bl);
+      ::encode(expect_state, bl);
+      op->exec("rbd", "trash_state_set", bl);
+    }
+
+    int trash_state_set(librados::IoCtx *ioctx, const std::string &id,
+                        const cls::rbd::TrashImageState &trash_state,
+                        const cls::rbd::TrashImageState &expect_state)
+    {
+      librados::ObjectWriteOperation op;
+      trash_state_set(&op, id, trash_state, expect_state);
+
+      return ioctx->operate(RBD_TRASH, &op);
     }
 
     int status_get_version(librados::IoCtx *ioctx, const std::string &oid,
