src/cls/rbd/cls_rbd_client.h
@@ -567,6 +567,11 @@ namespace librbd {
                          cls::rbd::TrashImageSpec *trash_spec);
     int trash_get(librados::IoCtx *ioctx, const std::string &id,
                   cls::rbd::TrashImageSpec *trash_spec);
+    void trash_state_set(librados::ObjectWriteOperation *op,
+                         const std::string &id,
+                         const cls::rbd::TrashImageState &trash_state);
+    int trash_state_set(librados::IoCtx *ioctx, const std::string &id,
+                        const cls::rbd::TrashImageState &trash_state);
 
     // operations on rbd_namespace object
     void namespace_add(librados::ObjectWriteOperation *op,
